--- a/app/src/main/res/layout/dialog_link.xml
+++ b/app/src/main/res/layout/dialog_link.xml
@@ -6,36 +6,22 @@
         android:id="@+id/dialog_link_text_remove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:visibility="gone"
-        android:layout_centerInParent="true"/>
-    
-    <ImageView 
-        android:id="@+id/dialog_link_thumbnail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:layout_alignParentLeft="true"
-        android:layout_margin="5dp"
-        android:layout_centerVertical="true"/>
+        android:textColor="@color/text_secondary"
+        android:visibility="gone"/>
     
     <TextView
         android:id="@+id/dialog_link_link_url"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/dialog_link_thumbnail"
-        android:textColor="@color/mega"
-        android:layout_marginTop="10dp" />
+        android:textColor="@color/text_secondary"/>
     
     <TextView
         android:id="@+id/dialog_link_symbol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="!" 
-        android:layout_alignLeft="@id/dialog_link_link_url"
-        android:layout_toRightOf="@id/dialog_link_thumbnail"
         android:layout_below="@id/dialog_link_link_url"
-        android:layout_marginRight="0dp"
-        android:paddingRight="0dp" />
+        android:textColor="@color/text_secondary"/>
     
     <TextView
         android:id="@+id/dialog_link_link_key"
@@ -43,8 +29,6 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/dialog_link_symbol"
         android:layout_below="@id/dialog_link_link_url"
-        android:layout_marginLeft="0dp"
-        android:paddingLeft="0dp" 
-        android:layout_marginBottom="10dp"/>
+        android:textColor="@color/text_secondary"/>
     
 </RelativeLayout>
