--- a/app/src/main/res/layout/item_transfers_list.xml
+++ b/app/src/main/res/layout/item_transfers_list.xml
@@ -1,26 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:descendantFocusability="blocksDescendants"
-    android:id="@+id/transfers_list_item_layout" >
-    
-    <CheckBox
-        android:id="@+id/transfers_list_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:checked="false"
-        android:focusable="false"
-        android:layout_centerVertical="true" />
+    android:id="@+id/transfers_list_item_layout" >    
     
     <ImageView
         android:id="@+id/transfers_list_thumbnail"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp" 
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:scaleType="fitCenter"
-        android:layout_toRightOf="@id/transfers_list_checkbox"  />
+        android:layout_centerVertical="true"/>
     
     <ImageView
         android:id="@+id/transfers_list_small_icon"
@@ -33,39 +22,24 @@
     <TextView
         android:id="@+id/transfers_list_filename"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/transfers_list_thumbnail"
-        android:paddingLeft="5dp"
-        android:paddingTop="7dp"
-        android:textColor="@color/file_list_first_row" />
-    
-    <ImageView 
-        android:id="@+id/transfers_list_one_dot"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:src="@drawable/dot"
-        android:layout_toRightOf="@id/transfers_list_filename"
-        android:paddingTop="7dp"
-        android:paddingLeft="5dp" />
-    
-    <TextView
-        android:id="@+id/transfers_list_transfer_rate"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_alignTop="@id/transfers_list_one_dot"
-        android:layout_toRightOf="@id/transfers_list_one_dot"
-        android:paddingLeft="5dp"
-        android:paddingTop="7dp"
-        android:textColor="@color/file_list_second_row" />
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="13dp"
+        android:textColor="@color/file_list_first_row"
+        android:ellipsize="end"
+        android:textSize="16sp"
+        android:maxLines="1"/>
+
     
     <ImageView
         android:id="@+id/transfers_list_completed_image"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
+        android:layout_marginBottom="14dp" 
         android:layout_toRightOf="@id/transfers_list_thumbnail"
         android:layout_below="@id/transfers_list_filename"
-        android:paddingBottom="7dp"
-        android:paddingLeft="5dp" />
+        android:layout_alignLeft="@id/transfers_list_filename" />
     
     <TextView
         android:id="@+id/transfers_list_completed_text"
@@ -73,57 +47,37 @@
         android:layout_height="25dp"
         android:layout_toRightOf="@id/transfers_list_completed_image"
         android:layout_below="@+id/transfers_list_filename"
-        android:paddingLeft="5dp"
-        android:paddingBottom="7dp"
-        android:textColor="@color/file_list_second_row" />
-    
+        android:textColor="@color/file_list_second_row"
+        android:layout_marginLeft="5dp"/>
 
-     
+	<ImageButton
+		android:id="@+id/transfers_list_option_remove"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:src="@drawable/ic_close_grey"
+		android:background="@null"
+		android:layout_centerVertical="true"
+		android:layout_alignParentRight="true"/>
+         
     <ProgressBar
 	    android:id="@+id/transfers_list_bar"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content" 
-		style="@style/MEGAProgressBarTransfers"  
-		android:layout_margin="5dip" 
+		style="@style/UsedSpaceProgressBar"  
+        android:layout_marginLeft="13dp" 
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="6dp" 
 		android:layout_below="@id/transfers_list_filename"
-		android:paddingRight="5dp"
+		android:layout_toLeftOf="@id/transfers_list_option_remove"
         android:layout_toRightOf="@id/transfers_list_thumbnail" />
-    
-    <ImageButton 
-        android:id="@+id/transfers_list_three_dots"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/action_selector_ic"
-		android:background="@null" 
-        android:layout_alignTop="@id/transfers_list_filename"
-        android:layout_alignParentRight="true"
-		android:paddingTop="12dp"
-        android:paddingRight="15dp" />
-    
-    <RelativeLayout
-        android:id="@+id/transfers_list_options"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/transfers_list_three_dots"
-        android:padding="0dp"
-        android:background="@color/adapters_background">
-        
-        <TableLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+
+	<TextView
+		android:id="@+id/transfers_list_transfer_rate"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignRight="@id/transfers_list_bar"
+		android:textColor="@color/file_list_second_row"
+		android:layout_marginTop="17dp" />
             
-            <TableRow>
-	        
-		        <ImageButton
-		            android:id="@+id/transfers_list_option_remove"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_delete"
-		            android:background="@null" 
-		            android:layout_gravity="center_horizontal"/>
-	        </TableRow>        
-        </TableLayout>
-    </RelativeLayout>
-    
 </RelativeLayout>
 
