--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -316,7 +316,7 @@
         <item name="android:padding">10dp</item>
     </style>
 
-    <style name="UsedSpaceProgressBar" parent="android:Widget.Material.Light.ProgressBar.Horizontal">
+    <style name="UsedSpaceProgressBar" parent="@android:style/Widget.DeviceDefault.ProgressBar.Large">
         <item name="android:indeterminateOnly">false</item>
         <item name="android:minHeight">2dp</item>
         <item name="android:maxHeight">2dp</item>
