--- a/app/src/main/res/layout/activity_file_link.xml
+++ b/app/src/main/res/layout/activity_file_link.xml
@@ -1,75 +1,157 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:rounded="http://schemas.android.com/apk/res-auto"
-    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/file_link_fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:fitsSystemWindows="true"
     tools:context=".FileLinkActivityLollipop" >
-    
-    <RelativeLayout 
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:id="@+id/file_link_layout">
 
-        
-        <RelativeLayout
-            android:layout_width="match_parent"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_file_link"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        tools:context=".FileLinkActivityLollipop" />
+
+    <LinearLayout
+        android:id="@+id/options_file_link_layout"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
+        android:gravity="right"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/file_link_button_import"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/file_link_name_layout">
-			
-	        <ImageView
-	            android:id="@+id/file_link_icon"
-	            android:layout_width="wrap_content"
-	            android:layout_height="30dp"
-	            android:layout_marginTop="15dp"
-	            android:layout_marginLeft="30dp"/>
-	        
-	        <TextView
-		        android:id="@+id/file_link_name"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:paddingTop="5dp"
-		        android:layout_toRightOf="@id/file_link_icon"
-		        android:layout_alignBottom="@id/file_link_icon" />
-	        
-	        <TextView
-	            android:id="@+id/file_link_size"
-	            android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_toRightOf="@id/file_link_name"
-		        android:layout_alignBottom="@id/file_link_name" />
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/accentColor"
+            android:textSize="14sp"
+            android:gravity="center_vertical"/>
+
+        <TextView
+            android:id="@+id/file_link_button_download"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/accentColor"
+            android:textSize="14sp"
+            android:gravity="center_vertical"/>
+    </LinearLayout>
+
+    <View
+        android:id="@+id/separator_3"
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:layout_above="@id/options_file_link_layout"
+        android:background="@color/separator_grey" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar_file_link"
+        android:layout_above="@id/separator_3"
+        android:id="@+id/file_link_scroll_relative">
+
+    <ScrollView
+        android:id="@+id/file_link_scroll_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/file_link_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:orientation="vertical" >
+
+      <!--  <ImageView
+                android:id="@+id/"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter" /> -->
+
+            <ImageView
+                 android:id="@+id/file_link_icon"
+                 android:layout_width="wrap_content"
+                 android:layout_height="200dp" />
+
+            <TextView
+                android:id="@+id/file_link_name"
+                android:layout_below="@id/file_link_icon"
+                android:textColor="@color/black"
+                android:fontFamily="sans-serif-medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <View
+                android:id="@+id/separator_1"
+                android:layout_width="fill_parent"
+                android:layout_height="1dip"
+                android:layout_below="@id/file_link_name"
+                android:background="@color/separator_grey"/>
+
+            <!-- SIZE LAYOUT -->
+
+            <LinearLayout
+                android:id="@+id/file_link_size_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/separator_1"
+                android:gravity="left"
+                android:orientation="horizontal" >
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/file_link_size_image"
+                        style="@style/dialogActionButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/info_ic"
+                        android:layout_centerVertical="true"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left" >
+
+                    <TextView
+                        android:id="@+id/file_link_info_menu_size"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/file_properties_info_size_file"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/file_link_size"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/file_link_info_menu_size"
+                        android:textColor="@color/grey_info_menu" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <View
+                android:id="@+id/separator_2"
+                android:layout_width="fill_parent"
+                android:layout_below="@id/file_link_size_layout"
+                android:layout_height="1dip"
+                android:background="@color/separator_grey"/>
+
         </RelativeLayout>
-    
-	     <mega.privacy.android.app.components.RoundedImageView 
-	         android:id="@+id/file_link_image"
-	         android:layout_width="wrap_content"
-	         android:layout_height="200dp"
-	         android:layout_centerHorizontal="true"
-	         android:layout_below="@id/file_link_name_layout"
-	         android:paddingLeft="30dp"
-	         android:paddingRight="30dp"
-	         rounded:corner_radius="10dp" 
-	         rounded:border_width="2dp"
-	         rounded:border_color="@color/border_file_properties"/>
-	     
-	     <Button
-	         android:id="@+id/file_link_button_import"
-	         style="@style/button_MEGA"
-	         android:layout_gravity="center"
-	         android:text="@string/general_import" 
-	         android:gravity="center"
-	         android:layout_below="@id/file_link_image" >
-	     </Button>
-            
-	     <Button
-	         android:id="@+id/file_link_button_download"
-	         style="@style/button_MEGA"
-	         android:layout_gravity="center"
-	         android:text="@string/general_download" 
-	         android:gravity="center"
-	         android:layout_marginTop="15dp"
-	         android:layout_below="@id/file_link_button_import" >
-	     </Button>
+    </ScrollView>
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
-</ScrollView>
