--- a/app/src/main/res/layout/fragment_confirm_email.xml
+++ b/app/src/main/res/layout/fragment_confirm_email.xml
@@ -1,11 +1,12 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/confirm_email_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ConfirmEmailActivity">
-    
+    tools:context=".lollipop.ConfirmEmailFragmentLollipop">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,10 +29,10 @@
             android:textSize="18sp"
             android:textColor="#333333"
             android:fontFamily="sans-serif-light"
-            android:layout_marginLeft="67.5dp"
-            android:layout_marginRight="66.5dp"
             android:layout_marginTop="229dp"
             android:layout_centerHorizontal="true"
+            android:layout_marginLeft="66.5dp"
+            android:layout_marginRight="67.5dp"
             android:gravity="center"/>
 
         <TextView
@@ -42,11 +43,11 @@
             android:textSize="18sp"
             android:textColor="#999999"
             android:fontFamily="sans-serif-light"
-            android:layout_marginLeft="48dp"
-            android:layout_marginRight="48dp"
+            android:layout_below="@+id/confirm_email_awaiting"
             android:layout_marginTop="24dp"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/confirm_email_awaiting"
+            android:layout_marginLeft="48dp"
+            android:layout_marginRight="48dp"
             android:gravity="center"/>
 
     </RelativeLayout>
