--- a/app/src/main/res/layout/item_shared_folder.xml
+++ b/app/src/main/res/layout/item_shared_folder.xml
@@ -1,153 +1,68 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rounded="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:descendantFocusability="blocksDescendants"
     android:id="@+id/shared_folder_item_layout">
-    
-    <CheckBox
-        android:id="@+id/shared_folder_contact_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:checked="false"
-        android:focusable="false"
-        android:layout_centerVertical="true"
-        android:button="@drawable/btn_check_holo_light" />
          
     <RelativeLayout
 		android:id="@+id/shared_folder_contact_relative_layout_avatar"
-		android:layout_width="54dp"
-		android:layout_height="54dp"
-		android:layout_marginLeft="5dp" 
-		android:paddingTop="3dp"
-		android:layout_toRightOf="@id/shared_folder_contact_checkbox">
-		
-	    <mega.privacy.android.app.components.RoundedImageView 
-	         android:id="@+id/shared_folder_contact_thumbnail"
-	         android:layout_width="54dp"
-	         android:layout_height="54dp"
-	         android:scaleType="fitCenter"
-	         rounded:corner_radius="27dp" 
-	         rounded:border_width="0dp"
-	         rounded:border_color="@color/border_file_properties"/>
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="18dp"
+        android:layout_centerVertical="true">
+    
+	    <mega.privacy.android.app.components.RoundedImageView
+            android:id="@+id/shared_folder_contact_thumbnail"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitCenter"
+            android:layout_centerInParent="true"
+            rounded:border_color="@color/border_file_properties"
+            rounded:border_width="0dp"
+            rounded:corner_radius="27dp" />
 	    
 	    <TextView
 	        android:id="@+id/shared_folder_contact_initial_letter"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent" 
-	        android:layout_centerInParent="true"
-		    android:gravity="center_horizontal|center_vertical" />
-    
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="-5dp" />
     </RelativeLayout>
     
     <TextView
         android:id="@+id/shared_folder_contact_name"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/shared_folder_contact_relative_layout_avatar"
-        android:paddingLeft="5dp"
-        android:paddingTop="7dp"
-         android:textStyle="bold" />
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="13dp"
+        android:textColor="@color/file_list_first_row" 
+        android:ellipsize="end"
+        android:textSize="16sp"
+        android:maxLines="1"/>    
     
     <TextView
         android:id="@+id/shared_folder_contact_permissions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/shared_folder_contact_relative_layout_avatar"
         android:layout_below="@id/shared_folder_contact_name"
-        android:textColor="@color/file_list_second_row"
-        android:paddingLeft="5dp"
-        android:paddingBottom="7dp"/>
+        android:layout_toRightOf="@id/shared_folder_contact_relative_layout_avatar"
+        android:layout_marginLeft="13dp"
+        android:textSize="14sp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/file_list_second_row" />
     
     <ImageButton 
         android:id="@+id/shared_folder_contact_three_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/action_selector_ic"
-		android:background="@null" 
-        android:layout_alignTop="@id/shared_folder_contact_name"
         android:layout_alignParentRight="true"
-		android:paddingTop="12dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="15dp" />
-    <!--  
-    <ImageView
-        android:id="@+id/shared_folder_contact_arrow_selection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/arrow_selection"
-		android:layout_alignBottom="@id/shared_folder_contact_permissions"
-        android:layout_alignParentRight="true"
-        android:paddingRight="15dp" />
-    -->
-       <LinearLayout 
-           android:id="@+id/shared_folder_options"
-          android:layout_width="fill_parent"
-       android:layout_height="wrap_content"
-       	android:layout_below="@id/shared_folder_contact_permissions"
-       	android:padding="0dp"
-       	android:background="@color/adapters_background"
-       	android:orientation="horizontal">
-	    
-           <RelativeLayout
-                android:id="@+id/shared_folder_permissions_option_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" >
-		           
-		         <ImageView
-		            android:id="@+id/shared_folder_option_permissions"
-		            android:layout_width="match_parent"
-		            android:layout_height="match_parent"
-		            android:src="@drawable/permissions_ic"
-		            style="@style/dialogActionButton"
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:layout_marginTop="-10dp"/>
-		         
-		          <TextView 
-                    android:id="@+id/shared_folder_option_permissions_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/file_properties_shared_folder_change_permissions"
-                    android:layout_centerHorizontal="true"
-                     android:paddingBottom="10dp"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>	
-		           
-		     </RelativeLayout>
-           
-           <RelativeLayout
-                android:id="@+id/shared_folder_remove_share_option_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" >
-		           	
-		         <ImageView
-		            android:id="@+id/shared_folder_option_clear_share"
-		            android:layout_width="match_parent"
-		            android:layout_height="match_parent"
-		            android:src="@drawable/ic_clear_shares"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton"
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:layout_marginTop="-10dp"/>
-		         <TextView 
-                    android:id="@+id/shared_folder_option_clear_share_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/context_delete"
-                    android:layout_centerHorizontal="true"
-                     android:paddingBottom="10dp"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>	               
-		      </RelativeLayout>       
-	        
-    </LinearLayout>
+        android:background="@null"
+        android:paddingLeft="10dp"
+		android:layout_centerVertical="true"
+        android:src="@drawable/ic_dots_vertical_grey" />
+
 </RelativeLayout>
 
