--- a/app/src/main/res/drawable/black_button_border.xml
+++ b/app/src/main/res/drawable/black_button_border.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle" >
     <stroke
         android:width="1dp"
-        android:color="@color/black" />
+        android:color="@color/divider_upgrade_account" />
 </shape>
