--- a/app/src/main/res/layout/fragment_upgrade_account.xml
+++ b/app/src/main/res/layout/fragment_upgrade_account.xml
@@ -5,6 +5,7 @@
 	android:id="@+id/scroll_view_upgrade">
     
     <LinearLayout
+		android:id="@+id/linear_layout_upgrade"
         android:layout_width="match_parent"
     	android:layout_height="match_parent"
     	android:orientation="vertical"
