--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,26 +26,6 @@
         <item name="textStyle">normal</item>
     </style>
 
-    <style name="InputField">
-        <item name="android:layout_marginTop">5dp</item>
-        <item name="android:layout_marginBottom">8dp</item>
-        <item name="android:layout_marginLeft">30dp</item>
-        <item name="android:layout_marginRight">30dp</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@drawable/edit_text_holo_light</item>
-    </style>
-
-    <style name="InputFieldCC">
-        <item name="android:layout_marginTop">0dp</item>
-        <item name="android:layout_marginBottom">0dp</item>
-        <item name="android:layout_marginLeft">20dp</item>
-        <item name="android:layout_marginRight">20dp</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@drawable/edit_text_holo_light</item>
-    </style>
-
     <style name="SpinnerFieldCC">
         <item name="android:layout_marginTop">0dp</item>
         <item name="android:layout_marginBottom">0dp</item>
@@ -55,63 +35,9 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="button_MEGA">
-        <item name="android:layout_marginTop">3dp</item>
-        <item name="android:layout_marginBottom">5dp</item>
-        <item name="android:layout_marginLeft">30dp</item>
-        <item name="android:layout_marginRight">30dp</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-
-        <item name="android:background">@drawable/btn_default_holo_light</item>
-	    <item name="android:textColor">@color/white</item>
-    </style>
-
-    <style name="CheckBox_MEGA">
-        <item name="android:layout_marginTop">5dp</item>
-        <item name="android:layout_marginBottom">8dp</item>
-        <item name="android:layout_marginLeft">30dp</item>
-        <item name="android:layout_marginRight">30dp</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-    </style>
-
-    <style name="button_MEGA_inverse">
-        <item name="android:layout_marginTop">5dp</item>
-        <item name="android:layout_marginBottom">5dp</item>
-        <item name="android:layout_marginLeft">30dp</item>
-        <item name="android:layout_marginRight">30dp</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-
-        <item name="android:background">@drawable/btn_default_holo_light_inverse</item>
-	    <item name="android:textColor">@color/white</item>
-    </style>
-
-    <style name="checkbox_MEGA" parent="android:Widget.CompoundButton.CheckBox">
-        <item name="android:layout_marginTop">5dp</item>
-        <item name="android:layout_marginBottom">5dp</item>
-        <item name="android:layout_marginLeft">30dp</item>
-        <item name="android:layout_marginRight">0dp</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-
-      <item name="android:button">@drawable/btn_check_holo_light</item>
-   </style>
-
-    <style name="radio_MEGA" parent="android:Widget.CompoundButton.RadioButton">
-      <item name="android:button">@drawable/btn_radio_holo_light</item>
-   </style>
-
-    <style name="ProgressBarTheme.mega" parent="android:Widget.ProgressBar.Horizontal">
-      <item name="android:progressDrawable">@drawable/progress_horizontal_holo_light</item>
-      <item name="android:indeterminateDrawable">@drawable/progress_indeterminate_horizontal_holo_light</item>
-      <item name="android:minHeight">20dip</item>
-      <item name="android:maxHeight">20dip</item>
-  </style>
-
-    <style name="login_activity" parent="@style/Theme.AppCompat.Light">
+    <style name="no_title_activity" parent="@style/Theme.AppCompat.Light">
         <item name="android:windowNoTitle">true</item>
+        <item name="colorAccent">@color/accentColor</item>
     </style>
 
     <style name="Theme.AppCompat.Light.NoActionBar.FullScreen" parent="@style/Theme.AppCompat.Light">
@@ -121,33 +47,27 @@
 	    <item name="android:windowContentOverlay">@null</item>
 	</style>
 
-    <style name="full_screen_image_activity" parent="@style/Theme.AppCompat.Light">
-        <item name="android:windowNoTitle">true</item>
-    </style>
-
-    <style name="MEGAProgressBar" parent="android:Widget.ProgressBar.Horizontal">
-		 <item name="android:indeterminateOnly">false</item>
-          <item name="android:progressDrawable">@drawable/custom_progress_bar_horizontal_ok</item>
-          <item name="android:minHeight">8dip</item>
-          <item name="android:maxHeight">8dip</item>
-	</style>
-
-    <style name="MEGAProgressBarTransfers" parent="android:Widget.ProgressBar.Horizontal">
+    <style name="MEGAProgressBarTransfers" parent="Widget.AppCompat.ProgressBar.Horizontal">
 		 <item name="android:indeterminateOnly">false</item>
           <item name="android:progressDrawable">@drawable/custom_progress_bar_horizontal_transfer</item>
           <item name="android:minHeight">10dip</item>
           <item name="android:maxHeight">20dip</item>
 	</style>
 
-    <style name="MEGAProgressBarLogin" parent="android:Widget.ProgressBar.Horizontal">
+    <style name="MEGAProgressBarLogin" parent="Widget.AppCompat.ProgressBar.Horizontal">
 		 <item name="android:indeterminateOnly">false</item>
-          <item name="android:progressDrawable">@drawable/custom_progress_bar_horizontal_login</item>
           <item name="android:minHeight">10dip</item>
           <item name="android:maxHeight">20dip</item>
 	</style>
 
-
     <!--New Styles-->
+
+    <style name="UsedSpaceProgressBar" parent="Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:progressDrawable">@drawable/custom_progress_bar_horizontal_ok</item>
+        <item name="android:minHeight">2dp</item>
+        <item name="android:maxHeight">2dp</item>
+    </style>
 
     <!-- Base application theme. -->
     <style name="Theme.Megaactionbar" parent="Theme.AppCompat.Light.NoActionBar">
@@ -314,12 +234,6 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">#9e9e9e</item>
         <item name="android:padding">10dp</item>
-    </style>
-
-    <style name="UsedSpaceProgressBar" parent="@android:style/Widget.DeviceDefault.ProgressBar.Large">
-        <item name="android:indeterminateOnly">false</item>
-        <item name="android:minHeight">2dp</item>
-        <item name="android:maxHeight">2dp</item>
     </style>
 
     <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
