Bug #5479 - In Android 4.4 the toolbar is not shown properly under the status bar (it doesn't happen in <=Android 4.3, nor in >=Android 5.0)

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -86,6 +86,7 @@
 
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">true</item>
 
         <item name="windowActionModeOverlay">true</item>
         <item name="actionModeBackground">@color/lollipop_primary_color</item>
@@ -187,6 +188,7 @@
 
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">true</item>
 
         <item name="windowActionModeOverlay">true</item>
         <item name="actionModeBackground">@color/lollipop_primary_color</item>
@@ -212,6 +214,7 @@
 
         <item name="android:windowDrawsSystemBarBackgrounds">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">true</item>
 
         <!-- You can also set colorControlNormal, colorControlActivated
              colorControlHighlight & colorSwitchThumbNormal. -->
