Bug #5487 - Replace elevation of cards in Upgrade Account screen for Android 4

--- a/app/src/main/res/layout/fragment_upgrade_account.xml
+++ b/app/src/main/res/layout/fragment_upgrade_account.xml
@@ -30,6 +30,7 @@
 					android:layout_width="125dp"
 					android:layout_height="118dp"
 					android:background="@color/white"
+					android:padding="2dp"
 					android:gravity="center_vertical">
 
 					<TextView
