--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -198,6 +198,7 @@
                 android:background="@color/chat_background">
 
                 <TableLayout
+                    android:id="@+id/empty_table_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
