--- a/app/src/main/res/layout-v21/sliding_chat_panel.xml
+++ b/app/src/main/res/layout-v21/sliding_chat_panel.xml
@@ -171,6 +171,36 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/file_list_clear_history_chat_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/file_clear_history_chat_image"
+                style="@style/dialogActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:src="@drawable/ic_ignore"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/file_list_clear_history_chat_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="18dp"
+                android:text="@string/general_clear"
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/file_list_mute_chat_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
