--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -87,4 +87,6 @@
 
     <color name="chat_sliding_panel_separator">#dcdcdcdc</color>
     <color name="gradient_avatar_chat">#44000000</color>
+
+    <color name="status_connected">#13e03c</color>
 </resources>
